# imi

./: .architecture-rules.yml  .dockerignore  .env.example  .env.test  .gitignore  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  README.md  SECURITY.md  alembic.ini  build-dev.sh  dev-hot.sh  docker-compose.dev-hot.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  config.py  database.py  git_ops.py  github_client.py  main.py  metrics.py  neo4j_client.py
config/: app_config.example.json  inference.yaml.example  otel-collector-dev.yml  prometheus-dev.yml
deployment/: entrypoint.sh  nginx.dev.conf  strip-unused-ml-deps.sh  supervisord.conf  supervisord.dev-hot.conf
docs/: README.md  mcp_tool_conventions.md  world-model-concept.md
evals/: README.md
imi-frontend/: Dockerfile  README.md  eslint.config.mjs  jest.config.js  jest.setup.js  middleware.ts  next.config.ts  package-lock.json  package.json  run-tests.sh  tailwind.config.js  tsconfig.build.json
migrations/: env.py  script.py.mako
scripts/: audit_validity_windows.py  backfill_signal_index.py  backfill_supersedes_edges.py  check_evals.sh  draft_fixture.py  eval_conflict_precision.py  export_diagrams.mjs  generate_synthetic_kb.py  make_variant.py  rebuild_kb.py  recover_inferred_edges.py  regenerate_grounded_profiles.py  run_evals.py  smoke_test.sh
tests/: conftest.py  issue-133_test_e2e_bot_control.ts  issue-138_test_coroutine_function_check.py  issue-143_test_entity_file_updates.py  issue-150_test_entity_file_updater.py  issue-150_test_entity_file_updater_simple.py  issue-150_test_project_enrichment.py  issue-150_test_team_enrichment.py  issue-151_test_verify_implementation.py  issue-156_test_data.py  issue-164_test_package_export.py  issue-164_test_package_installation.py  issue-164_test_package_validation.py  issue-185_test_claude_client.py  issue-185_test_config.py  issue-276_test_auth_context.py  (+193 more)
(+592 files in other folders)
